ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: traefik-ingress
spec:
 rules:
   - host: 127.0.0.1.xip.io
     http:
       paths:
         - path: /
           backend:
             serviceName: nginx
             servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: dashboard-ingress
 namespace: kube-system
spec:
 rules:
   - host: dashboard.127.0.0.1.xip.io
     http:
       paths:
         - path: /
           backend:
             serviceName: kubernetes-dashboard
             servicePort: 80
