ingress.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-services
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: 127.0.0.1.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
